add ticket token generation
