# docs/swagger.json
@@ -215,6 +215,29 @@
                 ],
                 "responses": {}
             }
+        },
+        "/tickets/{id}/token": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "tags": [
+                    "Tickets"
+                ],
+                "summary": "Updates ticket verification token",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Ticket id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
